# TodoApp-FastAPI-

./: README.md  pyproject.toml
Backend/: pyproject.toml
Backend/todos/: main.py
Backend/todos/models/: todos.py
Frontend/: package-lock.json  package.json
Frontend/app/: page.tsx
todos/: main.py
todos/config/: db.py
